Fix code overflow

--- a/public/less/_admin.less
+++ b/public/less/_admin.less
@@ -64,4 +64,10 @@
             margin-left: 5px;
         }
     }
+
+    code,
+    pre {
+        white-space: pre-wrap;
+        word-wrap: break-word;
+    }
 }
